--- a/articles.html
+++ b/articles.html
@@ -57,17 +57,17 @@
 				<div class="row">
 					<div class="col-xs-12 col-md-12 menu-block">
 						<ul class="menu">
-							<li><a href="#">О нас</a></li>
-							<li class="active"><a href="#">Услуги</a></li>
-							<li><a href="#">Продукция Ли Вест</a></li>
+							<li><a href="/photo.html">О нас</a></li>
+							<li><a href="/services.html">Услуги</a></li>
+							<li><a href="/catalog.html">Продукция Ли Вест</a></li>
 							<li><a href="#">Цигун</a></li>
-							<li><a href="#">Акции</a></li>
-							<li><a href="#">События</a></li>
-							<li><a href="#">Статьи</a></li>
+							<li><a href="/actions.html">Акции</a></li>
+							<li><a href="/news.html">События</a></li>
+							<li class="active"><a href="/articles.html">Статьи</a></li>
 							<li><a href="#">Подарочные сертификаты</a></li>
-							<li><a href="#">Консультация врача ТКМ</a></li>
+							<li><a href="/staff.html">Консультация врача ТКМ</a></li>
 							<li><a href="#">Контакты</a></li>
-							<li><a href="#">Отзывы</a></li>
+							<li><a href="/reviews.html">Отзывы</a></li>
 						</ul>
 					</div>
 				</div>
