--- a/catalog.html
+++ b/catalog.html
@@ -57,17 +57,17 @@
 				<div class="row">
 					<div class="col-xs-12 col-md-12 menu-block">
 						<ul class="menu">
-							<li><a href="#">О нас</a></li>
-							<li class="active"><a href="#">Услуги</a></li>
-							<li><a href="#">Продукция Ли Вест</a></li>
+							<li><a href="/photo.html">О нас</a></li>
+							<li><a href="/services.html">Услуги</a></li>
+							<li class="active"><a href="/catalog.html">Продукция Ли Вест</a></li>
 							<li><a href="#">Цигун</a></li>
-							<li><a href="#">Акции</a></li>
-							<li><a href="#">События</a></li>
-							<li><a href="#">Статьи</a></li>
+							<li><a href="/actions.html">Акции</a></li>
+							<li><a href="/news.html">События</a></li>
+							<li><a href="/articles.html">Статьи</a></li>
 							<li><a href="#">Подарочные сертификаты</a></li>
-							<li><a href="#">Консультация врача ТКМ</a></li>
+							<li><a href="/staff.html">Консультация врача ТКМ</a></li>
 							<li><a href="#">Контакты</a></li>
-							<li><a href="#">Отзывы</a></li>
+							<li><a href="/reviews.html">Отзывы</a></li>
 						</ul>
 					</div>
 				</div>
@@ -95,36 +95,36 @@
 						<P>Равным образом сложившаяся структура организации в значительной степени обуславливает создание форм развития. Задача организации, в особенности же начало повседневной работы по формированию позиции требуют определения и уточнения системы обучения кадров, соответствует насущным потребностям. Идейные соображения высшего порядка, а также новая модель организационной деятельности требуют от нас анализа новых предложений.</P>
 						<div class="row">
 							<div class="col-xs-12 col-md-4 catalog-element">
-								<p class="name"><a href="#">Массаж Гуаша спины</a></p>
+								<p class="name"><a href="/catalog-inner.html">Массаж Гуаша спины</a></p>
 								<div class="image"><img src="/images/catalog.jpg" border="0"></div>
 								<P class="prev">Эликсир долголетия  — универсальное восстанавливающее</P>
 								<h3 class="price">2500 &#8381;</h3>
 								<div class="info">
-									<p class="name"><a href="#">Массаж Гуаша спины</a></p>
+									<p class="name"><a href="/catalog-inner.html">Массаж Гуаша спины</a></p>
 									<P class="text">Повышает иммунитет и сопротивляемость организма, снижает утомляемость и повышает работоспособность, улучшает память. Используется при неврастении, бессоннице, анемии, язвенной болезни желудка, астме</P>
 									<div class="count"><button>-</button><input type="text"><button>+</button></div>
 									<input type="button" value="В корзину" class="buy">
 								</div>
 							</div>
 							<div class="col-xs-12 col-md-4 catalog-element">
-								<p class="name"><a href="#">Пилюли «Великое<br>восстановление»</a></p>
+								<p class="name"><a href="/catalog-inner.html">Пилюли «Великое<br>восстановление»</a></p>
 								<div class="image"><div class="discount">-10%</div><img src="/images/catalog.jpg" border="0"></div>
 								<P class="prev">Эликсир долголетия  — универсальное восстанавливающее</P>
 								<h3 class="price"><span class="old">2500 &#8381;</span> <span class="discount">1500 &#8381;</span></h3>
 								<div class="info">
-									<p class="name"><a href="#">Пилюли «Великое<br>восстановление»</a></p>
+									<p class="name"><a href="/catalog-inner.html">Пилюли «Великое<br>восстановление»</a></p>
 									<P class="text">Повышает иммунитет и сопротивляемость организма, снижает утомляемость и повышает работоспособность, улучшает память. Используется при неврастении, бессоннице, анемии, язвенной болезни желудка, астме</P>
 									<div class="count"><button>-</button><input type="text"><button>+</button></div>
 									<input type="button" value="В корзину" class="buy">
 								</div>
 							</div>
 							<div class="col-xs-12 col-md-4 catalog-element">
-								<p class="name"><a href="#">Массаж Гуаша спины</a></p>
+								<p class="name"><a href="/catalog-inner.html">Массаж Гуаша спины</a></p>
 								<div class="image"><img src="/images/catalog.jpg" border="0"></div>
 								<P class="prev">Эликсир долголетия  — универсальное восстанавливающее</P>
 								<h3 class="price"><span class="old">2500 &#8381;</span> <span class="discount">1500 &#8381;</span></h3>
 								<div class="info">
-									<p class="name"><a href="#">Массаж Гуаша спины</a></p>
+									<p class="name"><a href="/catalog-inner.html">Массаж Гуаша спины</a></p>
 									<P class="text">Повышает иммунитет и сопротивляемость организма, снижает утомляемость и повышает работоспособность, улучшает память. Используется при неврастении, бессоннице, анемии, язвенной болезни желудка, астме</P>
 									<div class="count"><button>-</button><input type="text"><button>+</button></div>
 									<input type="button" value="В корзину" class="buy">
@@ -133,36 +133,36 @@
 						</div>
 						<div class="row">
 							<div class="col-xs-12 col-md-4 catalog-element">
-								<p class="name"><a href="#">Массаж Гуаша спины</a></p>
+								<p class="name"><a href="/catalog-inner.html">Массаж Гуаша спины</a></p>
 								<div class="image"><img src="/images/catalog.jpg" border="0"></div>
 								<P class="prev">Эликсир долголетия  — универсальное восстанавливающее</P>
 								<h3 class="price">2500 &#8381;</h3>
 								<div class="info">
-									<p class="name"><a href="#">Массаж Гуаша спины</a></p>
+									<p class="name"><a href="/catalog-inner.html">Массаж Гуаша спины</a></p>
 									<P class="text">Повышает иммунитет и сопротивляемость организма, снижает утомляемость и повышает работоспособность, улучшает память. Используется при неврастении, бессоннице, анемии, язвенной болезни желудка, астме</P>
 									<div class="count"><button>-</button><input type="text"><button>+</button></div>
 									<input type="button" value="В корзину" class="buy">
 								</div>
 							</div>
 							<div class="col-xs-12 col-md-4 catalog-element">
-								<p class="name"><a href="#">Массаж Гуаша спины</a></p>
+								<p class="name"><a href="/catalog-inner.html">Массаж Гуаша спины</a></p>
 								<div class="image"><img src="/images/catalog.jpg" border="0"></div>
 								<P class="prev">Эликсир долголетия  — универсальное восстанавливающее</P>
 								<h3 class="price"><span class="old">2500 &#8381;</span> <span class="discount">1500 &#8381;</span></h3>
 								<div class="info">
-									<p class="name"><a href="#">Массаж Гуаша спины</a></p>
+									<p class="name"><a href="/catalog-inner.html">Массаж Гуаша спины</a></p>
 									<P class="text">Повышает иммунитет и сопротивляемость организма, снижает утомляемость и повышает работоспособность, улучшает память. Используется при неврастении, бессоннице, анемии, язвенной болезни желудка, астме</P>
 									<div class="count"><button>-</button><input type="text"><button>+</button></div>
 									<input type="button" value="В корзину" class="buy">
 								</div>
 							</div>
 							<div class="col-xs-12 col-md-4 catalog-element">
-								<p class="name"><a href="#">Массаж Гуаша спины</a></p>
+								<p class="name"><a href="/catalog-inner.html">Массаж Гуаша спины</a></p>
 								<div class="image"><img src="/images/catalog.jpg" border="0"></div>
 								<P class="prev">Эликсир долголетия  — универсальное восстанавливающее</P>
 								<h3 class="price"><span class="old">2500 &#8381;</span> <span class="discount">1500 &#8381;</span></h3>
 								<div class="info">
-									<p class="name"><a href="#">Массаж Гуаша спины</a></p>
+									<p class="name"><a href="/catalog-inner.html">Массаж Гуаша спины</a></p>
 									<P class="text">Повышает иммунитет и сопротивляемость организма, снижает утомляемость и повышает работоспособность, улучшает память. Используется при неврастении, бессоннице, анемии, язвенной болезни желудка, астме</P>
 									<div class="count"><button>-</button><input type="text"><button>+</button></div>
 									<input type="button" value="В корзину" class="buy">
