--- a/staff.html
+++ b/staff.html
@@ -57,17 +57,17 @@
 				<div class="row">
 					<div class="col-xs-12 col-md-12 menu-block">
 						<ul class="menu">
-							<li><a href="#">О нас</a></li>
-							<li class="active"><a href="#">Услуги</a></li>
-							<li><a href="#">Продукция Ли Вест</a></li>
+							<li><a href="/photo.html">О нас</a></li>
+							<li><a href="/services.html">Услуги</a></li>
+							<li><a href="/catalog.html">Продукция Ли Вест</a></li>
 							<li><a href="#">Цигун</a></li>
-							<li><a href="#">Акции</a></li>
-							<li><a href="#">События</a></li>
-							<li><a href="#">Статьи</a></li>
+							<li><a href="/actions.html">Акции</a></li>
+							<li><a href="/news.html">События</a></li>
+							<li><a href="/articles.html">Статьи</a></li>
 							<li><a href="#">Подарочные сертификаты</a></li>
-							<li><a href="#">Консультация врача ТКМ</a></li>
+							<li class="active"><a href="/staff.html">Консультация врача ТКМ</a></li>
 							<li><a href="#">Контакты</a></li>
-							<li><a href="#">Отзывы</a></li>
+							<li><a href="/reviews.html">Отзывы</a></li>
 						</ul>
 					</div>
 				</div>
@@ -83,40 +83,40 @@
 					</div>
 					<div class="col-xs-12 col-md-6 specials-element">
 						<div class="image">
-							<img src="/images/spec.jpg" border="0">
+							<a href="/staff-inner.html"><a href="/staff-inner.html"><img src="/images/spec.jpg" border="0"></a></a>
 						</div>
 						<div class="info">
-							<h3 class="text-uppercase"><a href="#">Борисова Наталья Артемовна</a></h3>
+							<h3 class="text-uppercase"><a href="/staff-inner.html">Борисова Наталья Артемовна</a></h3>
 							<P>Направление деятельности</P>
 							<a href="#" class="bluebutton">Записаться на прием</a>
 						</div>
 					</div>
 					<div class="col-xs-12 col-md-6 specials-element">
 						<div class="image">
-							<img src="/images/spec.jpg" border="0">
+							<a href="/staff-inner.html"><img src="/images/spec.jpg" border="0"></a>
 						</div>
 						<div class="info">
-							<h3 class="text-uppercase"><a href="#">Борисова Наталья Артемовна</a></h3>
+							<h3 class="text-uppercase"><a href="/staff-inner.html">Борисова Наталья Артемовна</a></h3>
 							<P>Направление деятельности</P>
 							<a href="#" class="bluebutton">Записаться на прием</a>
 						</div>
 					</div>
 					<div class="col-xs-12 col-md-6 specials-element">
 						<div class="image">
-							<img src="/images/spec.jpg" border="0">
+							<a href="/staff-inner.html"><img src="/images/spec.jpg" border="0"></a>
 						</div>
 						<div class="info">
-							<h3 class="text-uppercase"><a href="#">Борисова Наталья Артемовна</a></h3>
+							<h3 class="text-uppercase"><a href="/staff-inner.html">Борисова Наталья Артемовна</a></h3>
 							<P>Направление деятельности</P>
 							<a href="#" class="bluebutton">Записаться на прием</a>
 						</div>
 					</div>
 					<div class="col-xs-12 col-md-6 specials-element">
 						<div class="image">
-							<img src="/images/spec.jpg" border="0">
+							<a href="/staff-inner.html"><img src="/images/spec.jpg" border="0"></a>
 						</div>
 						<div class="info">
-							<h3 class="text-uppercase"><a href="#">Борисова Наталья Артемовна</a></h3>
+							<h3 class="text-uppercase"><a href="/staff-inner.html">Борисова Наталья Артемовна</a></h3>
 							<P>Направление деятельности</P>
 							<a href="#" class="bluebutton">Записаться на прием</a>
 						</div>
