--- a/catalog.html
+++ b/catalog.html
@@ -52,7 +52,7 @@
 	
 	<article>
 	
-		<section>
+		<section style="position:relative">
 			<div class="container nopadding menu-wrap">
 				<div class="row">
 					<div class="col-xs-12 col-md-12 menu-block">
@@ -72,9 +72,12 @@
 					</div>
 				</div>
 			</div>
+			<div id="basket"><div class="count">3</div></div>
 		</section>
+		
 
 		<section>
+		
 			<div class="container paddingleftmenu">
 				<div class="row">
 					<div class="col-xs-12 col-md-3 left-menu livest">
