--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<section>
 			<div class="container nopadding menu-wrap">
 				<div class="row">
-					<div class="col-xs-12 col-md-12 menu-block">
+					<div class="col-xs-12 col-md-12 menu-block" style="margin-bottom:0;">
 						<ul class="menu">
 							<li><a href="/photo.html">О нас</a></li>
 							<li><a href="/services.html">Услуги</a></li>
@@ -115,9 +115,25 @@
 								</ul>
 							</li>
 							<li><a href="#">Косметические</a></li>
-							<li><a href="#">Коррекция фигуры</a></li>
+							<li><a href="#">Коррекция фигуры</a>
+								<ul>
+									<li><a href="#">Массаж Гуаша спины</a></li>
+									<li><a href="#">Массаж ГУаша головы</a></li>
+									<li><a href="#">Массаж Гуаша спины и головы</a></li>
+									<li><a href="#">Массаж Гуаша ног</a></li>
+									<li><a href="#">Массаж со Стихиями</a></li>
+								</ul>
+							</li>
 							<li><a href="#">СПА</a></li>
-							<li><a href="#">Комплексные программы</a></li>
+							<li><a href="#">Комплексные программы</a>
+								<ul>
+									<li><a href="#">Массаж Гуаша спины</a></li>
+									<li><a href="#">Массаж ГУаша головы</a></li>
+									<li><a href="#">Массаж Гуаша спины и головы</a></li>
+									<li><a href="#">Массаж Гуаша ног</a></li>
+									<li><a href="#">Массаж со Стихиями</a></li>
+								</ul>
+							</li>
 						</ul>
 					</div>
 					<div class="col-xs-12 col-md-9 services-block">
@@ -125,7 +141,7 @@
 						<div class="row">
 							<div class="col-xs-12 col-md-4 services-element">
 								<h3><a href="#">Массаж Гуаша спины</a></h3>
-								<div class="image"><img src="/images/serv1.jpg" border="0"></div>
+								<div class="image" style="border:0"><img src="/images/serv1.jpg" border="0"></div>
 								<div class="info">
 									<h3><a href="#">Массаж Гуаша спины</a></h3>
 									<P>Натуральный антипаразитарный сироп «Анпазит» изгоняет и уничтожает паразитов, обладает желчегонным действием, увлажняет легкие и прекращает кашель</P>
@@ -134,7 +150,7 @@
 							</div>
 							<div class="col-xs-12 col-md-4 services-element">
 								<h3><a href="#">Массаж Гуаша спины</a></h3>
-								<div class="image"><img src="/images/serv1.jpg" border="0"></div>
+								<div class="image" style="border:0"><img src="/images/serv1.jpg" border="0"></div>
 								<div class="info">
 									<h3><a href="#">Массаж Гуаша спины</a></h3>
 									<P>Натуральный антипаразитарный сироп «Анпазит» изгоняет и уничтожает паразитов, обладает желчегонным действием, увлажняет легкие и прекращает кашель</P>
@@ -143,7 +159,7 @@
 							</div>
 							<div class="col-xs-12 col-md-4 services-element">
 								<h3><a href="#">Массаж Гуаша спины</a></h3>
-								<div class="image"><img src="/images/serv1.jpg" border="0"></div>
+								<div class="image" style="border:0"><img src="/images/serv1.jpg" border="0"></div>
 								<div class="info">
 									<h3><a href="#">Массаж Гуаша спины</a></h3>
 									<P>Натуральный антипаразитарный сироп «Анпазит» изгоняет и уничтожает паразитов, обладает желчегонным действием, увлажняет легкие и прекращает кашель</P>
@@ -154,7 +170,7 @@
 						<div class="row">
 							<div class="col-xs-12 col-md-4 services-element">
 								<h3><a href="#">Массаж Гуаша спины</a></h3>
-								<div class="image"><img src="/images/serv1.jpg" border="0"></div>
+								<div class="image" style="border:0"><img src="/images/serv1.jpg" border="0"></div>
 								<div class="info">
 									<h3><a href="#">Массаж Гуаша спины</a></h3>
 									<P>Натуральный антипаразитарный сироп «Анпазит» изгоняет и уничтожает паразитов, обладает желчегонным действием, увлажняет легкие и прекращает кашель</P>
@@ -163,7 +179,7 @@
 							</div>
 							<div class="col-xs-12 col-md-4 services-element">
 								<h3><a href="#">Массаж Гуаша спины</a></h3>
-								<div class="image"><img src="/images/serv1.jpg" border="0"></div>
+								<div class="image" style="border:0"><img src="/images/serv1.jpg" border="0"></div>
 								<div class="info">
 									<h3><a href="#">Массаж Гуаша спины</a></h3>
 									<P>Натуральный антипаразитарный сироп «Анпазит» изгоняет и уничтожает паразитов, обладает желчегонным действием, увлажняет легкие и прекращает кашель</P>
@@ -172,7 +188,7 @@
 							</div>
 							<div class="col-xs-12 col-md-4 services-element">
 								<h3><a href="#">Массаж Гуаша спины</a></h3>
-								<div class="image"><img src="/images/serv1.jpg" border="0"></div>
+								<div class="image" style="border:0"><img src="/images/serv1.jpg" border="0"></div>
 								<div class="info">
 									<h3><a href="#">Массаж Гуаша спины</a></h3>
 									<P>Натуральный антипаразитарный сироп «Анпазит» изгоняет и уничтожает паразитов, обладает желчегонным действием, увлажняет легкие и прекращает кашель</P>
@@ -220,6 +236,8 @@
 			</div>
 		</section>
 		
+		<div class="clearfix"></div>
+		
 		<section>
 			<div class="container">
 				<div class="row">
@@ -260,6 +278,8 @@
 				</div>
 			</div>
 		</section>
+		
+		<div class="clearfix"></div>
 		
 		<section>
 			<div class="container nopadding" style="background:#eaeaea;">
@@ -309,6 +329,8 @@
 			</div>
 		</section>
 		
+		
+		
 		<section>
 			<div class="container">
 				<h1>Наши сертификаты</h1>
@@ -345,6 +367,8 @@
 				</div>
 			</div>
 		</section>
+		
+		<div class="clearfix"></div>
 		
 		<section>
 			<div class="container">
@@ -406,6 +430,8 @@
 				</div>
 			</div>
 		</section>
+		
+		<div class="clearfix"></div>
 		
 		<section>
 			<div class="container nopadding">
