--- a/photo.html
+++ b/photo.html
@@ -74,11 +74,24 @@
 			</div>
 		</section>
 		
+		<div class="clearfix"></div>
+		
 		<section>
 			<div class="container">
 				<div class="row photogallery-block">
 					<div class="col-xs-12 col-md-10 col-md-offset-1">
 						<h2 class="text-uppercase"><strong>Фотогалерея</strong></h2>
+					</div>
+				</div>
+			</div>
+		</section>
+		
+		<div class="clearfix"></div>
+		
+		<section>
+			<div class="container">
+				<div class="row photogallery-block">
+					<div class="col-xs-12 col-md-10 col-md-offset-1">
 						<div class="photogallery-info">
 							<h3 class="text-uppercase"><strong>Событие 1</strong></h3>
 							<P>10 января</P>
