--- a/actions.html
+++ b/actions.html
@@ -88,6 +88,8 @@
 							</div>
 						</div>
 						
+						<div class="clearfix"></div>
+						
 						<div class="actions-element">
 							<img src="/images/actions.jpg" border="0">
 							<div class="info">
